# password_manager_rust

./: Cargo.toml
src/: config.rs  main.rs
src/utils/: add.rs  aesutils.rs  dbconfig.rs  mod.rs  retrieve.rs
