[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.0"
base64 = "0.13.0"
block-modes = "0.8.1"
block-padding = "0.2.1"
hex = "0.4.2"
rand = "0.8.5"
mysql = "20.1.0"
bitvec = "1.0.1"
funty = "1.1.0"
sha2 = "0.10"
rpassword= "5.0"
clipboard = "0.5"
hmac= "0.12.1"
argh = "0.1"